--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ html {
   --black-color: #000;
 }
 
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* section-1 */
 
 .section-1 {
@@ -30,6 +36,78 @@ html {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  clip-path: polygon(100% 0, 100% 94%, 39% 100%, 0 99%, 0 0);
+  position: relative;
+}
+
+/* end  of section 1 */
+
+/* logo */
+.logo {
+  position: absolute;
+  top: 3rem;
+  left: 3rem;
+}
+.logo i {
+  font-size: 10rem;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+/* end of logo */
+
+/* navbar */
+
+.navbar {
+  position: absolute;
+  top: 3rem;
+  right: 10%;
+}
+.navbar-link {
+  font-size: 2rem;
+  display: inline-block;
+  margin: 0 3rem;
+  color: var(--black-color);
+  transition: all 0.5s;
+  text-decoration: none;
+}
+.navbar-link:hover {
+  transform: scale(1.5);
+}
+/* navbar end */
+
+/* section banner */
+
+.section-1-banner {
+  flex-direction: column;
+}
+.section-1-banner h1 {
+  font-size: 13rem;
+  font-weight: 300;
+  left: 0.5rem;
+  text-transform: uppercase;
+}
+
+.section-1-banner p {
+  font-size: 4rem;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
+  margin: 6rem 0 4rem 0;
+}
+
+.section-1-banner span {
+  font-size: 3rem;
+  margin-bottom: 5rem;
+}
+
+.section-1-banner button {
+  padding: 2rem 4rem;
+  font-size: 2rem;
+  background-color: var(--black-color);
+  color: var(--primary-color);
+  letter-spacing: 0.1rem;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
   clip-path: polygon(
     50% 0%,
     81% 5%,
@@ -42,6 +120,39 @@ html {
     0 0,
     23% 5%
   );
+  transition: all 0.5s;
 }
-
-/* end  of section 1 */
+.section-1-banner button:hover {
+  clip-path: polygon(
+    40% 15%,
+    77% 15%,
+    100% 10%,
+    100% 90%,
+    75% 85%,
+    40% 85%,
+    30% 100%,
+    0 50%,
+    0 50%,
+    30% 0
+  );
+}
+.slideshow {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.slideshow div {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0;
+}
+.slideshow div.change {
+  opacity: 1;
+}
