--- a/style.css
+++ b/style.css
@@ -75,6 +75,47 @@ html {
 }
 /* navbar end */
 
+/* cube */
+.cube-wrapper {
+  perspective: 100rem;
+}
+
+.cube {
+  width: 30rem;
+  height: 55rem;
+  background-color: red;
+  transform-style: preserve-3d;
+  transform: rotateY(140deg);
+}
+
+.front-side {
+  width: 100%;
+  height: 100%;
+  padding: 2.5rem;
+  background-color: #fefefe;
+  transform: translateZ(5rem);
+  position: absolute;
+}
+.front-side img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.back-side {
+  width: 100%;
+  height: 100%;
+  background-color: #fefefe;
+  transform: translateZ(-5rem);
+  position: absolute;
+}
+.back-side i {
+  font-size: 12rem;
+  color: var(--primary-color);
+  text-shadow: 0.1rem 0.1rem 0.2rem #aaa, -0.1rem -0.1rem 0.2rem #aaa;
+  transform: rotateY(180deg);
+}
+/* end of cube */
+
 /* section banner */
 
 .section-1-banner {
@@ -152,6 +193,7 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   opacity: 0;
+  transition: opacity 1s;
 }
 .slideshow div.change {
   opacity: 1;
