--- a/style.css
+++ b/style.css
@@ -81,13 +81,25 @@ html {
 }
 
 .cube {
+  position: relative;
   width: 30rem;
   height: 55rem;
   background-color: red;
   transform-style: preserve-3d;
-  transform: rotateY(140deg);
+  transform: rotateX(91deg);
+  transform-style: preserve-3d;
 }
-
+.front-side::before {
+  content: "";
+  width: 100%;
+  height: 10rem;
+  background-color: #fee;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: rotateX(-90deg);
+  transform-origin: top;
+}
 .front-side {
   width: 100%;
   height: 100%;
