--- a/style.css
+++ b/style.css
@@ -84,21 +84,30 @@ html {
   position: relative;
   width: 30rem;
   height: 55rem;
-  background-color: red;
+
   transform-style: preserve-3d;
-  transform: rotateX(91deg);
+  transform: rotateY(91deg);
   transform-style: preserve-3d;
 }
-.front-side::before {
+.front-side::before,
+.back-side::after {
   content: "";
   width: 100%;
   height: 10rem;
   background-color: #fee;
   position: absolute;
+}
+.front-side::before {
   top: 0;
   left: 0;
   transform: rotateX(-90deg);
   transform-origin: top;
+}
+.front-side::after {
+  bottom: 0;
+  right: 0;
+  transform: rotateX(90deg);
+  transform-origin: bottom;
 }
 .front-side,
 .back-side {
@@ -106,10 +115,41 @@ html {
   height: 100%;
   background-color: #fefefe;
   position: absolute;
+  transform-style: preserve-3d;
 }
 .front-side {
   padding: 2.5rem;
   transform: translateZ(5rem);
+}
+.back-side {
+  transform: translateZ(-5rem);
+}
+.back-side::after,
+.back-side::before {
+  content: "Iphone";
+  width: 10rem;
+  height: 100%;
+  background-color: #fee;
+  position: absolute;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  font-weight: 300;
+  color: #ec1919;
+}
+.back-side::before {
+  top: 0;
+  left: 0;
+  transform: rotateY(-90deg);
+  transform-origin: left;
+}
+.back-side::after {
+  top: 0;
+  right: 0;
+  transform: rotateY(90deg);
+  transform-origin: right;
 }
 
 .front-side img {
@@ -117,9 +157,7 @@ html {
   height: 100%;
   object-fit: contain;
 }
-.back-side {
-  transform: translateZ(-5rem);
-}
+
 .back-side i {
   font-size: 12rem;
   color: var(--primary-color);
