--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@
 html {
   font-size: 62.5%;
 }
-
+.container {
+  position: relative;
+}
 :root {
   --primary-color: #6deae6;
   --white-color: #fff;
@@ -36,7 +38,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  clip-path: polygon(100% 0, 100% 94%, 39% 100%, 0 99%, 0 0);
+  /* clip-path: polygon(100% 0, 100% 94%, 39% 100%, 0 99%, 0 0); */
   position: relative;
 }
 
@@ -84,10 +86,11 @@ html {
   position: relative;
   width: 30rem;
   height: 55rem;
-
   transform-style: preserve-3d;
-  transform: rotateY(91deg);
+  /* transform: rotateY(91deg); */
   transform-style: preserve-3d;
+  top: -2rem;
+  transition: transform 0.3s;
 }
 .front-side::before,
 .back-side::after {
@@ -165,7 +168,63 @@ html {
   transform: rotateY(180deg);
 }
 /* end of cube */
+/* controls */
 
+.controls {
+  position: absolute;
+  bottom: -15rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 10rem;
+  height: 10rem;
+  background-color: rgba(0, 0, 0, 0.9);
+  border-radius: 50%;
+  border: 1rem solid rgba(0, 0, 0, 0.8);
+}
+
+.controls a {
+  position: absolute;
+}
+.controls a:nth-child(1) {
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.controls a:nth-child(2) {
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.controls a:nth-child(3) {
+  top: 50%;
+  left: 0%;
+  transform: translateY(-50%);
+}
+.controls a:nth-child(4) {
+  top: 50%;
+  right: 0%;
+  transform: translateY(-50%);
+}
+.controls a:nth-child(5) {
+  top: 10%;
+  right: 10%;
+  transform: rotate(45deg);
+}
+.controls a:nth-child(6) {
+  bottom: 10%;
+  left: 10%;
+  transform: rotate(45deg);
+}
+.controls i {
+  font-size: 1.5rem;
+  color: var(--primary-color);
+  opacity: 0.5;
+  transition: all 0.4s;
+}
+.controls a:hover i {
+  opacity: 1;
+}
+/* end of controls */
 /* section banner */
 
 .section-1-banner {
